# quadcopter_simulation

./: .gitignore  README.md  oldcode.cpp  p.cpp  test  test.cpp  test.txt
mpc/: CMakeLists.txt  package.xml
mpc/launch/: mpc_launch.py  params.yaml
mpc/src/: controller.h  direct_force_control.py  mpc.cpp  mpc_no_acados.py  mpc_solver.py  nonlinear_solver.hh  nonlinear_solver.py
obstacle_avoidance/: CMakeLists.txt  package.xml
path_planning/: CMakeLists.txt  package.xml
path_planning/headers/: astar.hh  search_functions.hh
path_planning/src/: astar.hh  bfs.hh  conv.py  create_occupancy_grid.py  grid.txt  initialize_occupancy_grid.cpp  path_plan_main.cpp  path_point_publisher.cpp  polyfit.hh  remap_pcd.cpp  search_functions.hh  visualize_free_space.cpp
path_planning/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
path_planning/src/log/: latest_build
path_planning/util/: conv.py  create_occupancy_grid.py
quad_model/: CMakeLists.txt  controller_node.cpp  drone_properties.hpp  package.xml  params.yaml  physics_node.cpp  physics_sim.cpp  rotation_matrix.hpp  velocity_converter.cpp
quad_model/controllers/: Readme.md  control_matrices.hpp  controller_node.cpp  velocity_controller.cpp
quad_model/headers/: drone_properties.hpp  readme.md
quad_model/launch/: initialize_occupancy_grid.cpp  map.world  octo_launch.cpp  params.yaml  view_quadcopter.launch.py
quad_model/meshes/: city.mtl  city.pcd  drone.mtl  drone.stl  scale_pcd.py  scan.stl  scan2.stl  scan3.mtl  scan3.pcd  scan3.ply  scan3.stl  scan3_parsed.pcd
quad_model/sim/: physics_node.cpp  physics_sim.cpp  readme.md
quad_model/urdf/: map.urdf  quadcopter.urdf
